--- a/package.json
+++ b/package.json
@@ -13,8 +13,20 @@
   "author": "mathieu@damours.org",
   "license": "MIT",
   "devDependencies": {
-    "nucleotides": "matehat/nucleotides.js#master",
-    "jasmine": "^2.6.0"
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^7.3.0",
+    "browserify": "^14.4.0",
+    "globby": "^6.1.0",
+    "gulp": "^3.9.1",
+    "gulp-browserify": "^0.5.1",
+    "jasmine": "^2.6.0",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^1.1.0",
+    "through2": "^2.0.3",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   },
   "browserify": {
     "transform": [
