Upgrade babel/browserify dependencies

--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
   "license": "MIT",
   "devDependencies": {
     "@n9s/core": "^0.2.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.6.1",
-    "babelify": "^7.3.0",
-    "browserify": "^14.4.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "babelify": "^10.0.0",
+    "browserify": "^16.2.3",
     "globby": "^6.1.0",
     "gulp": "^3.9.1",
     "gulp-browserify": "^0.5.1",
@@ -35,7 +36,7 @@
         "babelify",
         {
           "presets": [
-            "env"
+            "@babel/preset-env"
           ]
         }
       ]
