--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "jasmine": "^2.6.0",
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-jasmine": "^1.1.0",
-    "through2": "^2.0.3"
+    "karma-jasmine": "^1.1.0"
   },
   "browserify": {
     "transform": [
