--- a/package.json
+++ b/package.json
@@ -19,10 +19,7 @@
     "@n9s/core": "^0.2.0",
     "babelify": "^10.0.0",
     "browserify": "^16.2.3",
-    "jasmine": "^2.6.0",
-    "karma": "^1.7.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-jasmine": "^1.1.0"
+    "jasmine": "^2.6.0"
   },
   "browserify": {
     "transform": [
